--- a/writerside/v3/Writerside/snippets/elsa-studio/wasm/index.html
+++ b/writerside/v3/Writerside/snippets/elsa-studio/wasm/index.html
@@ -20,7 +20,7 @@
     <link href="_content/CodeBeam.MudBlazor.Extensions/MudExtensions.min.css" rel="stylesheet" />
     <link href="_content/Radzen.Blazor/css/material-base.css" rel="stylesheet" >
     <link href="_content/Elsa.Studio.Shell/css/shell.css" rel="stylesheet">
-    <link href="Elsa.Studio.Host.Wasm.styles.css" rel="stylesheet">
+    <link href="ElsaStudioBlazorWasm.styles.css" rel="stylesheet">
 </head>
 
 <body>
